@@ -16,3 +16,4 @@
 20080827 code: agar.core.object format string.
 20080827 code: removed useless format string functions from agar.core.event
                in preparation for array variants.
+20080828 code: update to event API.
